swap, rebuild
